--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-streamlit
-psycopg2-binary
-bcrypt
-uuid
-json
-pandas
-python-dotenv
-ollama
-chromadb
-langchain
-langchain_community
-psycopg2
+streamlit==1.45.1
+psycopg2-binary==2.9.10
+bcrypt==4.3.0
+pandas==1.5.3  # Specify version compatible with your setup
+python-dotenv==1.0.0  # Specify version if needed
+ollama  # Ensure compatibility with Python 3.12
+chromadb  # Ensure compatibility with Python 3.12
+langchain  # Ensure compatibility with Python 3.12
+langchain_community  # Ensure compatibility with Python 3.12
